bpo-38202: PyObject_GetIter() should be checked for failure

An exception may occur during a PyObject_GetIter() call.